# Ocean

./: CMakeLists.txt  README.md
include/: camera.hpp  debug.hpp  hud.hpp  mesh.hpp  model.hpp
include/glad/: glad.h
include/shader/: fragment.fs  shader.hpp  skybox.fs  skybox.vs  text.fs  text.vs  vertex.vs  water.fs  water.vs
src/: camera.cpp  debug.cpp  glad.c  hud.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp
